--- a/assets/stories/1.md
+++ b/assets/stories/1.md
@@ -1,9 +1,12 @@
-# Fantastic Support
-## JANUARY 01 2025
-### Ayushi Sharma
+# Grateful for the Transformative Journey
+## MAY 26 2025
+### Karan
 
-![company logo](/assets/img/branding/logo-w-tagline.jpg)
+<!-- ![company logo](/assets/img/branding/logo-w-tagline.jpg) -->
 
-I started on a personalized diet plan to lose weight and regain my energy. The guidance and support were incredible, and I've not only reached my goal weight but also feel more vibrant and active than I have in years. It's truly a life-changing experience.
+Dear Dr. Shubhangi,
+I'm beyond grateful for the transformative journey we've embarked on together! Losing 15 kgs wasn't just about the number on the scale – it was about gaining confidence, energy, and a new lease on life. Your guidance, expertise, and unwavering support have been instrumental in my success.
+Thank you for being an exceptional diet doctor who not only cares about your patients' physical health but also their emotional well-being. Your dedication and passion inspire me to maintain this healthy lifestyle.
+I'm forever thankful for your support and expertise!
 
-TAGS: #diet #health #women
+TAGS: #diet #health #Men
