--- a/assets/blog/1.md
+++ b/assets/blog/1.md
@@ -9,7 +9,7 @@ tags:
 - diet tips
 - meal planning
 summary: This is the very first post
-featured_image: /assets/img/blog/sample.webp
+featured_image: /assets/img/blog/1.webp
 ---
 
 I'm glad you're here. It can feel like a lonely journey trying to figure out what to eat, especially with so much confusing information out there. Maybe you’re feeling tired, frustrated, or just plain lost when it comes to your health. I want you to know that you’re not alone and that it's okay to feel that way.
