--- a/assets/blog/1.md
+++ b/assets/blog/1.md
@@ -2,7 +2,7 @@
 title: A Fresh Start: Your Journey to Health
 slug: beginners-guide-healthy-eating
 date: 2025-09-04
-category: Diet Guidance
+category: Announcements
 tags:
 - healthy eating
 - nutrition
