--- a/assets/blog/2.md
+++ b/assets/blog/2.md
@@ -2,7 +2,7 @@
 title: Cabbage Stir-Fry
 slug: welcome-to-dietance-com
 date: 2025-09-04
-category: Announcements
+category: Recipe
 tags:
 - welcome
 - launch
